@@ -29,6 +29,7 @@ v0.0.3.0-alpha (TBA)
 =======================================
 
  + Abstract types
+ + Reference cells and arrays
  + Character literals
  + Raw text literals
  - Identifiers can no longer begin with apostrophe
